# schedule-diary

./: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: deploy-to-github-pages.yaml
app/: .gitignore  Cargo.toml  README.md
app/src/: main.rs
assets/: _layout-0a33ca64.js  index-1402df5a.css  index-a648b503.js  index-f4849ede.js
bot/: .gitignore  Cargo.toml
bot/src/: main.rs
gui/: .eslintrc.json  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
gui/public/: index.html
gui/src/: App.svelte  App.tsx  index.tsx  main.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src/components/: index.ts
gui/src/components/Header/: Header.scss  Header.tsx
gui/src/components/IconButton/: IconButton.scss  IconButton.tsx
gui/src/components/LessonCard/: LessonCard.scss
gui/src/components/ScheduleLIst/: ScheduleList.tsx
gui/src/hooks/: index.ts  useTelegram.ts
gui/src/pages/: SchedulePage.tsx  _layout.svelte  index.svelte
gui/src/scss/: main.scss
gui/src/styles/: main.scss  mixins.scss  variables.scss
public/: index.html
src/: App.tsx  index.tsx  main.scss
src-tauri/: README.md
src/components/LessonCard/: LessonCard.tsx
src/types/: LessonCard.type.ts
src/utils/: GenerateLessons.utils.ts
telebot/: README.md
